# vibe-typst

./: .containerignore  .dockerignore  .gitignore  Containerfile  LICENSE  README.md  codex-project-wrapper.sh  docker-entrypoint.sh
backend/: app.py  app_config.py  config.py  context.py  docstore.py  mcp_server.py  notes.py  pdf_mcp_server.py  pdf_service.py  pdf_transcript.py  projects.py  pyproject.toml  resolver.py  runtime.py  slidemap.py  store.py  typst_service.py  vcs.py  workdir.py
backend/sample/: welcome.typ
control/: add-user.sh  login.html  main.py  pyproject.toml  start-detached.sh  start.sh
docs/: architecture.md  deployment.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: AdminPage.jsx  App.jsx  CommentCard.jsx  FileBrowser.jsx  FileManager.jsx  FilePicker.jsx  OnboardingPage.jsx  PageSvg.jsx  PdfPreviewPane.jsx  PdfWorkspace.jsx  Presenter.jsx  PreviewPane.jsx  Projection.jsx  ProjectsPage.jsx  TermPanel.jsx  Toaster.jsx  TypstEditor.jsx  api.js  commentOrdering.js  main.jsx  pdfWorkspace.js  presentationPointer.js  presenterState.js  projectCreation.js  projectRouting.js  projectTypes.js  styles.css  versioning.js
frontend/test/: commentOrdering.test.js  comments.e2e.js  fileManager.e2e.js  pdfWorkspace.test.js  presentationPointer.e2e.js  presentationPointer.test.js  presenterState.test.js  projectCreationRouting.test.js  (+3 more)
notes/: deploy.md  implementation.md  learn-crdt-mcp.md  workbook-bugfix-0709.md  workbook_design.md  workbook_implementation.md  workbook_server-deploy-plan.md  workbook_unify.md
resolver/: Cargo.toml
resolver/src/: main.rs
scripts/: deploy-o3.sh
tests/: test_pdf_projects.py  test_regressions.py
(+1 files in other folders)
