[project]
name = "tcb-control"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "aiofiles>=24.1",
    "python-multipart>=0.0.20",
    "websockets>=12.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
